--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-# configure your datasource
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = fauzi1
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/crud
-
-# drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = update
+
+quarkus.mailer.auth-methods=DIGEST-MD5 CRAM-SHA256 CRAM-SHA1 CRAM-MD5 PLAIN LOGIN
+quarkus.mailer.from=csgoaerith@gmail.com
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.username=csgoaerith@gmail.com
+quarkus.mailer.password=oqsdzjneblmqjvma
+quarkus.mailer.start-tls=REQUIRED
+quarkus.mailer.mock=false
